--- a/Library_LJ/AndroidManifest.xml
+++ b/Library_LJ/AndroidManifest.xml
@@ -6,6 +6,11 @@
 	<uses-sdk
 		android:minSdkVersion="8"
 		android:targetSdkVersion="19" />
+	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" /> <!-- 检测网络状态 -->
+	<uses-permission android:name="android.permission.ACCESS_WIFI_STATE" /> <!-- 获取mac地址作为用户的备用唯一标识 -->
+	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" /> <!-- 缓存资源优先存入SDcard --><uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+	<uses-permission android:name="android.permission.INTERNET" />
+	<uses-permission android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS" />
 	<application
 		android:allowBackup="true"
 		android:icon="@drawable/ic_launcher"
