--- a/Library_LJ/app/build.gradle
+++ b/Library_LJ/app/build.gradle
@@ -30,4 +30,5 @@ android {
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     compile 'com.android.support:support-v4:23.0.0'
+    compile 'com.jakewharton:butterknife:7.0.1'
 }
