--- a/Library_LJ/app/build.gradle
+++ b/Library_LJ/app/build.gradle
@@ -40,7 +40,7 @@ android {
 
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
-    compile 'com.android.support:support-v4:23.0.0'
+    compile 'com.android.support:support-v4:24.0.0-beta1'
     compile 'com.orhanobut:logger:1.11'
     compile 'com.jakewharton:butterknife:7.0.1'
     compile 'com.squareup.okhttp3:okhttp:3.2.0'
@@ -48,5 +48,5 @@ dependencies {
     compile 'com.squareup.retrofit2:retrofit:2.0.2'
     compile 'com.squareup.retrofit2:converter-gson:2.0.2'
     compile 'com.squareup.retrofit2:adapter-rxjava:2.0.2'
-    compile 'com.android.support:recyclerview-v7:24.0.0-alpha1'
+    compile 'com.android.support:recyclerview-v7:24.0.0-beta1'
 }
