--- a/Library_LJ/app/src/main/AndroidManifest.xml
+++ b/Library_LJ/app/src/main/AndroidManifest.xml
@@ -14,14 +14,16 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name=".activity.MainActivity"
-            android:label="@string/app_name" >
+            android:name=".activity.SplashActivity"
+            android:label="@string/app_name"
+            android:theme="@style/Launcher">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".activity.MainActivity"></activity>
         <activity android:name=".activity.TabHostActivity"></activity>
     </application>
 
