--- a/Library_LJ/app/src/main/AndroidManifest.xml
+++ b/Library_LJ/app/src/main/AndroidManifest.xml
@@ -26,6 +26,10 @@
         </activity>
         <activity android:name=".activity.MainActivity"></activity>
         <activity android:name=".activity.TabHostActivity"></activity>
+
+        <meta-data
+            android:name="io.fabric.ApiKey"
+            android:value="91e21fe7f60278b7bc4113f33cb18536f06e2bb7"/>
     </application>
 
 </manifest>
