--- a/Library_LJ/app/build.gradle
+++ b/Library_LJ/app/build.gradle
@@ -1,5 +1,6 @@
 apply plugin: 'com.android.application'
 apply plugin: 'realm-android'
+apply plugin: 'com.neenbedankt.android-apt'
 
 android {
     compileSdkVersion 23
@@ -58,4 +59,8 @@ dependencies {
     //support 兼容包
     compile 'com.android.support:support-v4:23.4.0'
     compile 'com.android.support:recyclerview-v7:23.4.0'
+    // dagger2
+    compile 'com.google.dagger:dagger:2.5'
+    // android-apt插件引入dagger-compiler包, 不会编译到最后的源码中
+    apt 'com.google.dagger:dagger-compiler:2.5'
 }
