--- a/Library_LJ/app/build.gradle
+++ b/Library_LJ/app/build.gradle
@@ -67,4 +67,6 @@ dependencies {
     testCompile 'junit:junit:4.12'
     //Mock方式的包mockito
     testCompile 'org.mockito:mockito-core:2.0.76-beta'
+    //protobuf运行时环境
+    compile 'com.google.protobuf:protobuf-java:3.0.0-beta-3'
 }
