--- a/Library_LJ/app/build.gradle
+++ b/Library_LJ/app/build.gradle
@@ -41,7 +41,7 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     //log日志
     compile 'com.orhanobut:logger:1.11'
     //butterknife
@@ -69,4 +69,6 @@ dependencies {
     testCompile 'org.mockito:mockito-core:2.0.76-beta'
     //protobuf运行时环境
     compile 'com.google.protobuf:protobuf-java:3.0.0-beta-3'
+    // square公司出的protobuf方案wire的运行时环境
+    compile 'com.squareup.wire:wire-runtime:2.2.0'
 }
