--- a/Library_LJ/app/build.gradle
+++ b/Library_LJ/app/build.gradle
@@ -58,6 +58,7 @@ dependencies {
     testCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.4-beta2'
     //support 兼容包
     compile 'com.android.support:support-v4:23.4.0'
+    compile 'com.android.support:appcompat-v7:23.4.0'
     compile 'com.android.support:recyclerview-v7:23.4.0'
     //dagger2
     compile 'com.google.dagger:dagger:2.5'
