--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,7 @@
 *.apk
 *.ap_
 
-# Files for the Dalvik VM
+# Files for the ART/Dalvik VM
 *.dex
 
 # Java class files
@@ -11,6 +11,7 @@
 # Generated files
 bin/
 gen/
+out/
 
 # Gradle files
 .gradle/
@@ -26,7 +27,15 @@ proguard/
 # Log Files
 *.log
 
-#IntelliJ files
+# Android Studio Navigation editor temp files
+.navigation/
+
+# Android Studio captures folder
+captures/
+
+# Intellij
 *.iml
 .idea/
 
+# Keystore files
+*.jks
