--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,10 @@
 language: android
+
+jdk: oraclejdk7
+env:
+  matrix:
+    - ANDROID_TARGET=android-23  ANDROID_ABI=armeabi-v7a
+
 android:
   components:
     # Uncomment the lines below if you want to
@@ -8,16 +14,26 @@ android:
 
     # The BuildTools version used by your project
     - build-tools-23.0.3
-
-    # The SDK version used to compile your project
-    - android-23
-
     # Additional components
     - extra-android-m2repository
     - extra-android-support
 
     # Specify at least one system image,
     # if you need to run emulator(s) during your tests
-    - sys-img-armeabi-v7a-android-19
-script:
-  - "./Library_LJ/gradlew assembleRelease"
+    - sys-img-armeabi-v7a-android-23
+before_script:
+  # Create and start emulator
+  - echo no | android create avd --force -n test -t $ANDROID_TARGET --abi $ANDROID_ABI
+  - emulator -avd test -no-skin -no-audio -no-window &
+  - adb wait-for-device
+  - adb shell input keyevent 82 &
+
+script: ./gradlew connectedAndroidTest
+
+before_cache:
+  - rm -f $HOME/.gradle/caches/modules-2/modules-2.lock
+
+cache:
+  directories:
+    - $HOME/.gradle/caches/
+    - $HOME/.gradle/wrapper/
