--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ language: android
 jdk: oraclejdk7
 env:
   matrix:
-    - ANDROID_TARGET=android-22  ANDROID_ABI=armeabi-v7a
+    - ANDROID_TARGET=android-23  ANDROID_ABI=armeabi-v7a
 
 android:
   components:
@@ -14,13 +14,14 @@ android:
 
     # The BuildTools version used by your project
     - build-tools-23.0.3
+    -android-23
     # Additional components
     - extra-android-m2repository
     - extra-android-support
 
     # Specify at least one system image,
     # if you need to run emulator(s) during your tests
-    - sys-img-armeabi-v7a-android-22
+    - sys-img-armeabi-v7a-android-23
 before_script:
   # Create and start emulator
   - echo no | android create avd --force -n test -t $ANDROID_TARGET --abi $ANDROID_ABI
