优化配置文件

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,6 +38,12 @@ android {
         exclude 'META-INF/LICENSE.txt'
         exclude 'META-INF/NOTICE.txt'
     }
+    // 解决lint检查出错误导致打包失败的问题
+    android {
+      lintOptions {
+          abortOnError false
+      }
+  }
 }
 
 dependencies {
