增加WebView的Demo和腾X5内核的Demo
增加WebView的Demo和腾X5内核的Demo,还有增加一个算法demo页面

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,6 +29,16 @@ android {
             signingConfig signingConfigs.releaseConfig
         }
     }
+
+    splits {
+        abi {
+            enable true
+            reset()
+            include 'armeabi-v7a'
+            universalApk false
+        }
+    }
+
     //    android6.0中删除apache包, 用此引用
     useLibrary 'org.apache.http.legacy'
     packagingOptions {
