--- a/build.gradle
+++ b/build.gradle
@@ -10,6 +10,7 @@ buildscript {
         classpath 'io.realm:realm-gradle-plugin:1.0.1'
         classpath 'com.neenbedankt.gradle.plugins:android-apt:1.8'
         classpath ('com.tencent.tinker:tinker-patch-gradle-plugin:1.7.1')
+        classpath 'com.tencent.mm:AndResGuard-gradle-plugin:1.1.13'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
