--- a/app/build.gradle
+++ b/app/build.gradle
@@ -13,6 +13,7 @@ android {
         targetSdkVersion 25
         versionCode 1
         versionName "1.0"
+        multiDexEnabled true
     }
 
     signingConfigs {
@@ -103,6 +104,9 @@ dependencies {
     provided('com.tencent.tinker:tinker-android-anno:1.7.1')
     //tinker的核心库
     compile('com.tencent.tinker:tinker-android-lib:1.7.1')
+    //facebook的调优工具stecho
+    compile 'com.facebook.stetho:stetho:1.4.2'
+    compile 'com.facebook.stetho:stetho-okhttp3:1.4.2'
 
 }
 
