--- a/build.gradle
+++ b/build.gradle
@@ -8,9 +8,10 @@ buildscript {
     dependencies {
         classpath 'com.android.tools.build:gradle:2.3.0'
         classpath 'io.realm:realm-gradle-plugin:1.0.1'
-        classpath ('com.tencent.tinker:tinker-patch-gradle-plugin:1.7.1')
         classpath 'com.tencent.mm:AndResGuard-gradle-plugin:1.2.1'
         classpath 'com.tencent.bugly:symtabfileuploader:latest.release'
+        // tinkersupport插件, 其中lastest.release指拉取最新版本，也可以指定明确版本号，例如1.0.4
+        classpath "com.tencent.bugly:tinker-support:latest.release"
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
