--- a/app/tinker-support.gradle
+++ b/app/tinker-support.gradle
@@ -5,7 +5,7 @@ def bakPath = file("${buildDir}/bakApk/")
 /**
  * 此处填写每次构建生成的基准包目录
  */
-def baseApkDir = "app-0414-19-00-54"
+def baseApkDir = "app-0415-23-00-00"
 
 /**
  * 对于插件各参数的详细解析请参考
@@ -34,13 +34,13 @@ tinkerSupport {
     baseApkResourceMapping = "${bakPath}/${baseApkDir}/app-release-R.txt"
 
     // 构建基准包和补丁包都要指定不同的tinkerId，并且必须保证唯一性
-    tinkerId = "patch-1.0.3"
+    tinkerId = "patch-1.0.4"
 
     // 构建多渠道补丁时使用
     // buildAllFlavorsDir = "${bakPath}/${baseApkDir}"
 
     // 是否开启反射Application模式
-    enableProxyApplication = true
+    enableProxyApplication = false
 
 }
 
