优化代码， 加入packer-ng方式打渠道包
优化代码  加入packer-ng方式打渠道包

--- a/build.gradle
+++ b/build.gradle
@@ -7,11 +7,12 @@ buildscript {
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:2.3.0'
-        classpath 'io.realm:realm-gradle-plugin:1.0.1'
+        classpath 'io.realm:realm-gradle-plugin:3.1.2'
         classpath 'com.tencent.mm:AndResGuard-gradle-plugin:1.2.1'
         classpath 'com.tencent.bugly:symtabfileuploader:latest.release'
         // tinkersupport插件, 其中lastest.release指拉取最新版本，也可以指定明确版本号，例如1.0.4
         classpath "com.tencent.bugly:tinker-support:latest.release"
+        classpath 'com.mcxiaoke.gradle:packer-ng:1.0.9'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
