--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,8 +1,9 @@
 apply plugin: 'com.android.application'
+apply from: 'tinker-support.gradle'
 apply plugin: 'realm-android'
 apply plugin: 'AndResGuard'
-apply from: 'tinker-support.gradle'
 apply plugin: 'bugly'
+apply plugin: 'packer'
 
 bugly {
     appId = 'b1e580cd5e' // 注册时分配的App ID
@@ -31,13 +32,14 @@ android {
             keyPassword '2021516'
             storeFile file('/Users/liujie_gyh/Documents/ljkeystore')
             storePassword '2021516'
+            v2SigningEnabled false
         }
     }
 
     buildTypes {
         release {
-            minifyEnabled false //启动proguard
-            shrinkResources false // 编译阶段去除无用的资源, 设为true打包会出错，有空研究下
+            minifyEnabled true //启动proguard
+            shrinkResources true // 编译阶段去除无用的资源
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
             signingConfig signingConfigs.releaseConfig
         }
@@ -48,7 +50,7 @@ android {
             enable true
             reset()
             include /*'armeabi-v7a',*/ 'x86'
-            universalApk true
+            universalApk false
         }
     }
 
@@ -109,10 +111,6 @@ dependencies {
     compile 'com.squareup.wire:wire-runtime:2.2.0'
     //fresco加载图片
     compile 'com.facebook.fresco:fresco:0.12.0'
-//    //tinker,可选，用于生成application类
-//    provided 'com.tencent.tinker:tinker-android-anno:1.7.1'
-//    //tinker的核心库
-//    compile 'com.tencent.tinker:tinker-android-lib:1.7.1'
     //facebook的调优工具stecho
     compile 'com.facebook.stetho:stetho:1.4.2'
     compile 'com.facebook.stetho:stetho-okhttp3:1.4.2'
@@ -120,6 +118,8 @@ dependencies {
     compile 'com.tencent.bugly:crashreport_upgrade:latest.release'
     //其中latest.release指代最新Bugly NDK版本号，也可以指定明确的版本号，例如3.0
     compile 'com.tencent.bugly:nativecrashreport:latest.release'
+    //渠道打包工具
+    compile 'com.mcxiaoke.gradle:packer-helper:1.0.9'
 }
 
 // AndResGuard 配置开始----------------------------------
