--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ language: android
 jdk: oraclejdk7
 env:
   matrix:
-    - ANDROID_TARGET=android-23  ANDROID_ABI=armeabi-v7a
+    - ANDROID_TARGET=android-23 ANDROID_ABI=x86
 
 android:
   components:
@@ -21,7 +21,8 @@ android:
 
     # Specify at least one system image,
     # if you need to run emulator(s) during your tests
-    - sys-img-armeabi-v7a-android-23
+#    - sys-img-armeabi-v7a-android-23
+    - sys-img-x86-android-23
 before_script:
   # Create and start emulator
   - echo no | android create avd --force -n test -t $ANDROID_TARGET --abi $ANDROID_ABI
