--- a/gradle.properties
+++ b/gradle.properties
@@ -17,3 +17,5 @@
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
 market=markets.txt
+#用于区分是开发阶段还是发布状态
+isBuildModule=true
