--- a/app/src/main/debug/AndroidManifest.xml
+++ b/app/src/main/debug/AndroidManifest.xml
@@ -35,6 +35,7 @@
                   android:configChanges="orientation|screenSize|keyboardHidden"
                   android:windowSoftInputMode="stateHidden|adjustResize"/>
         <activity android:name=".activity.MvpArchitectureActivity"/>
+        <activity android:name=".activity.MvvmArchitectureActivity"/>
         <activity
             android:name="com.tencent.smtt.sdk.VideoActivity"
             android:configChanges="orientation|screenSize|keyboardHidden"
