--- a/app/build.gradle
+++ b/app/build.gradle
@@ -95,11 +95,14 @@ android {
 
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
+
     //log日志
     compile 'com.orhanobut:logger:1.15'
+
     //butterknife
     compile 'com.jakewharton:butterknife:8.8.1'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
+
     //okhttp + retrofit + rxandroid
     compile 'io.reactivex:rxandroid:1.2.1'
     compile 'com.squareup.okhttp3:okhttp:3.8.0'
@@ -107,37 +110,51 @@ dependencies {
     compile "com.squareup.retrofit2:retrofit:${RETROFIT_VERSION}"
     compile "com.squareup.retrofit2:converter-gson:${RETROFIT_VERSION}"
     compile "com.squareup.retrofit2:adapter-rxjava:${RETROFIT_VERSION}"
+
     //leakcanary
     debugCompile "com.squareup.leakcanary:leakcanary-android:${LEAK_CANARY_VERSION}"
     releaseCompile "com.squareup.leakcanary:leakcanary-android-no-op:${LEAK_CANARY_VERSION}"
     testCompile "com.squareup.leakcanary:leakcanary-android-no-op:${LEAK_CANARY_VERSION}"
+
     //support 兼容包
     compile 'com.android.support:multidex:1.0.1'
+    compile 'com.android.support.constraint:constraint-layout:1.1.0'
     compile "com.android.support:design:${APPCOMPAT_VERSION}"
     compile "com.android.support:support-v4:${APPCOMPAT_VERSION}"
     compile "com.android.support:appcompat-v7:${APPCOMPAT_VERSION}"
     compile "com.android.support:recyclerview-v7:${APPCOMPAT_VERSION}"
+
     //dagger2
     compile 'com.google.dagger:dagger:2.5'
+
     //android-apt插件-引入dagger-compiler包, 不会编译到最后的源码中
     annotationProcessor 'com.google.dagger:dagger-compiler:2.5'
+
     //单元测试-引入junit包, 会自动引入hamcrest包
     testCompile 'junit:junit:4.12'
+
     //Mock方式的包mockito
     testCompile 'org.mockito:mockito-core:2.0.76-beta'
+
     //google的protobuf运行时环境
     compile 'com.google.protobuf:protobuf-java:3.0.0'
+
     //square公司出的protobuf方案"wire"的运行时环境
     compile 'com.squareup.wire:wire-runtime:2.2.0'
+
     //fresco加载图片
     compile 'com.facebook.fresco:fresco:0.14.1'
+
     //facebook的调优工具stecho
     compile 'com.facebook.stetho:stetho:1.4.2'
     compile 'com.facebook.stetho:stetho-okhttp3:1.4.2'
+
     // bugly升级SDK已经集成crash上报功能
     compile 'com.tencent.bugly:crashreport_upgrade:latest.release'
+
     //其中latest.release指代最新Bugly NDK版本号，也可以指定明确的版本号，例如3.0
     compile 'com.tencent.bugly:nativecrashreport:latest.release'
+
     //渠道打包工具
     compile 'com.mcxiaoke.gradle:packer-helper:1.0.9'
 }
