--- a/app/src/main/debug/AndroidManifest.xml
+++ b/app/src/main/debug/AndroidManifest.xml
@@ -36,6 +36,7 @@
                   android:windowSoftInputMode="stateHidden|adjustResize"/>
         <activity android:name=".activity.MvpArchitectureActivity"/>
         <activity android:name=".activity.MvvmArchitectureActivity"/>
+        <activity android:name=".activity.MvvmArchitectureActivity1"/>
         <activity
             android:name="com.tencent.smtt.sdk.VideoActivity"
             android:configChanges="orientation|screenSize|keyboardHidden"
