--- a/app/src/main/release/AndroidManifest.xml
+++ b/app/src/main/release/AndroidManifest.xml
@@ -31,6 +31,7 @@
         <activity android:name=".activity.MainActivity"/>
         <activity android:name=".activity.TabHostActivity"/>
         <activity android:name=".activity.WebViewActivity"/>
+        <activity android:name=".activity.MvvmArchitectureActivity1"/>
         <activity android:name=".activity.X5WebViewActivity"
                   android:configChanges="orientation|screenSize|keyboardHidden"
                   android:windowSoftInputMode="stateHidden|adjustResize"/>
