--- a/app/build.gradle
+++ b/app/build.gradle
@@ -97,7 +97,7 @@ dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
 
     //log日志
-    compile 'com.orhanobut:logger:1.15'
+    compile 'com.orhanobut:logger:2.2.0'
 
     //butterknife
     compile 'com.jakewharton:butterknife:8.8.1'
@@ -105,8 +105,8 @@ dependencies {
 
     //okhttp + retrofit + rxandroid
     compile 'io.reactivex:rxandroid:1.2.1'
-    compile 'com.squareup.okhttp3:okhttp:3.8.0'
-    compile 'com.squareup.okhttp3:logging-interceptor:3.4.1'
+    compile "com.squareup.okhttp3:okhttp:${OKHTTP_VERSION}"
+    compile "com.squareup.okhttp3:logging-interceptor:${OKHTTP_VERSION}"
     compile "com.squareup.retrofit2:retrofit:${RETROFIT_VERSION}"
     compile "com.squareup.retrofit2:converter-gson:${RETROFIT_VERSION}"
     compile "com.squareup.retrofit2:adapter-rxjava:${RETROFIT_VERSION}"
@@ -117,7 +117,7 @@ dependencies {
     testCompile "com.squareup.leakcanary:leakcanary-android-no-op:${LEAK_CANARY_VERSION}"
 
     //support 兼容包
-    compile 'com.android.support:multidex:1.0.1'
+    compile 'com.android.support:multidex:1.0.3'
     compile 'com.android.support.constraint:constraint-layout:1.1.0'
     compile "com.android.support:design:${APPCOMPAT_VERSION}"
     compile "com.android.support:support-v4:${APPCOMPAT_VERSION}"
@@ -125,10 +125,9 @@ dependencies {
     compile "com.android.support:recyclerview-v7:${APPCOMPAT_VERSION}"
 
     //dagger2
-    compile 'com.google.dagger:dagger:2.5'
-
+    compile 'com.google.dagger:dagger:2.8'
     //android-apt插件-引入dagger-compiler包, 不会编译到最后的源码中
-    annotationProcessor 'com.google.dagger:dagger-compiler:2.5'
+    annotationProcessor 'com.google.dagger:dagger-compiler:2.8'
 
     //单元测试-引入junit包, 会自动引入hamcrest包
     testCompile 'junit:junit:4.12'
@@ -137,17 +136,17 @@ dependencies {
     testCompile 'org.mockito:mockito-core:2.0.76-beta'
 
     //google的protobuf运行时环境
-    compile 'com.google.protobuf:protobuf-java:3.0.0'
+    compile 'com.google.protobuf:protobuf-java:3.4.0'
 
     //square公司出的protobuf方案"wire"的运行时环境
     compile 'com.squareup.wire:wire-runtime:2.2.0'
 
     //fresco加载图片
-    compile 'com.facebook.fresco:fresco:0.14.1'
+    compile 'com.facebook.fresco:fresco:1.8.1'
 
     //facebook的调优工具stecho
-    compile 'com.facebook.stetho:stetho:1.4.2'
-    compile 'com.facebook.stetho:stetho-okhttp3:1.4.2'
+    compile 'com.facebook.stetho:stetho:1.5.0'
+    compile 'com.facebook.stetho:stetho-okhttp3:1.5.0'
 
     // bugly升级SDK已经集成crash上报功能
     compile 'com.tencent.bugly:crashreport_upgrade:latest.release'
