--- a/config.gradle
+++ b/config.gradle
@@ -7,7 +7,8 @@ ext {
     VERSION_CODE = 4
     VERSION_NAME = '1.5.0'
     APPCOMPAT_VERSION = '25.3.0'
-    LEAK_CANARY_VERSION = '1.5.1'
+    LEAK_CANARY_VERSION = '1.5.4'
+    OKHTTP_VERSION = '3.10.0'
     RETROFIT_VERSION = '2.1.0'
 
 }
