--- a/app/build.gradle
+++ b/app/build.gradle
@@ -90,72 +90,83 @@ android {
         //需要你自己使用工具压缩图片,比如pngquant, tinypng
         cruncherEnabled true
     }
+}
 
+// 将第三库引用的android support库的版本都改成统一的版本号
+configurations.all {
+    resolutionStrategy.eachDependency { DependencyResolveDetails details ->
+        def requested = details.requested
+        if (requested.group == 'com.android.support') {
+            if (!requested.name.startsWith("multidex") && !requested.name.startsWith("constraint")) {
+                details.useVersion "${APPCOMPAT_VERSION}"
+            }
+        }
+    }
 }
 
 dependencies {
-    compile fileTree(include: ['*.jar'], dir: 'libs')
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
 
     //log日志
-    compile 'com.orhanobut:logger:2.2.0'
+    implementation 'com.orhanobut:logger:2.2.0'
 
     //butterknife
-    compile 'com.jakewharton:butterknife:8.8.1'
+    implementation 'com.jakewharton:butterknife:8.8.1'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
 
     //okhttp + retrofit + rxandroid
-    compile 'io.reactivex:rxandroid:1.2.1'
-    compile "com.squareup.okhttp3:okhttp:${OKHTTP_VERSION}"
-    compile "com.squareup.okhttp3:logging-interceptor:${OKHTTP_VERSION}"
-    compile "com.squareup.retrofit2:retrofit:${RETROFIT_VERSION}"
-    compile "com.squareup.retrofit2:converter-gson:${RETROFIT_VERSION}"
-    compile "com.squareup.retrofit2:adapter-rxjava:${RETROFIT_VERSION}"
+    implementation 'io.reactivex:rxandroid:1.2.1'
+    implementation "com.squareup.okhttp3:okhttp:${OKHTTP_VERSION}"
+    implementation "com.squareup.okhttp3:logging-interceptor:${OKHTTP_VERSION}"
+    implementation "com.squareup.retrofit2:retrofit:${RETROFIT_VERSION}"
+    implementation "com.squareup.retrofit2:converter-gson:${RETROFIT_VERSION}"
+    implementation "com.squareup.retrofit2:adapter-rxjava:${RETROFIT_VERSION}"
 
     //leakcanary
-    debugCompile "com.squareup.leakcanary:leakcanary-android:${LEAK_CANARY_VERSION}"
-    releaseCompile "com.squareup.leakcanary:leakcanary-android-no-op:${LEAK_CANARY_VERSION}"
-    testCompile "com.squareup.leakcanary:leakcanary-android-no-op:${LEAK_CANARY_VERSION}"
+    debugImplementation "com.squareup.leakcanary:leakcanary-android:${LEAK_CANARY_VERSION}"
+    releaseImplementation "com.squareup.leakcanary:leakcanary-android-no-op:${LEAK_CANARY_VERSION}"
+    testImplementation "com.squareup.leakcanary:leakcanary-android-no-op:${LEAK_CANARY_VERSION}"
 
     //support 兼容包
-    compile 'com.android.support:multidex:1.0.3'
-    compile 'com.android.support.constraint:constraint-layout:1.1.0'
-    compile "com.android.support:design:${APPCOMPAT_VERSION}"
-    compile "com.android.support:support-v4:${APPCOMPAT_VERSION}"
-    compile "com.android.support:appcompat-v7:${APPCOMPAT_VERSION}"
-    compile "com.android.support:recyclerview-v7:${APPCOMPAT_VERSION}"
+    implementation 'com.android.support:multidex:1.0.3'
+    implementation 'com.android.support.constraint:constraint-layout:1.1.0'
+    implementation "com.android.support:design:${APPCOMPAT_VERSION}"
+    implementation "com.android.support:support-v4:${APPCOMPAT_VERSION}"
+    implementation "com.android.support:appcompat-v7:${APPCOMPAT_VERSION}"
+    implementation "com.android.support:recyclerview-v7:${APPCOMPAT_VERSION}"
 
     //dagger2
-    compile 'com.google.dagger:dagger:2.8'
+    implementation 'com.google.dagger:dagger:2.8'
     //android-apt插件-引入dagger-compiler包, 不会编译到最后的源码中
     annotationProcessor 'com.google.dagger:dagger-compiler:2.8'
 
     //单元测试-引入junit包, 会自动引入hamcrest包
-    testCompile 'junit:junit:4.12'
+    testImplementation 'junit:junit:4.12'
 
     //Mock方式的包mockito
-    testCompile 'org.mockito:mockito-core:2.0.76-beta'
+    testImplementation 'org.mockito:mockito-core:2.0.76-beta'
 
     //google的protobuf运行时环境
-    compile 'com.google.protobuf:protobuf-java:3.4.0'
+    implementation 'com.google.protobuf:protobuf-java:3.4.0'
 
     //square公司出的protobuf方案"wire"的运行时环境
-    compile 'com.squareup.wire:wire-runtime:2.2.0'
+    implementation 'com.squareup.wire:wire-runtime:2.2.0'
 
     //fresco加载图片
-    compile 'com.facebook.fresco:fresco:1.8.1'
+    implementation 'com.facebook.fresco:fresco:1.8.1'
 
     //facebook的调优工具stecho
-    compile 'com.facebook.stetho:stetho:1.5.0'
-    compile 'com.facebook.stetho:stetho-okhttp3:1.5.0'
+    implementation 'com.facebook.stetho:stetho:1.5.0'
+    implementation 'com.facebook.stetho:stetho-okhttp3:1.5.0'
 
     // bugly升级SDK已经集成crash上报功能
-    compile 'com.tencent.bugly:crashreport_upgrade:latest.release'
+    implementation 'com.tencent.bugly:crashreport_upgrade:latest.release'
 
     //其中latest.release指代最新Bugly NDK版本号，也可以指定明确的版本号，例如3.0
-    compile 'com.tencent.bugly:nativecrashreport:latest.release'
+    implementation 'com.tencent.bugly:nativecrashreport:latest.release'
 
     //渠道打包工具
-    compile 'com.mcxiaoke.gradle:packer-helper:1.0.9'
+    implementation 'com.mcxiaoke.gradle:packer-helper:1.0.9'
 }
 
 // AndResGuard 配置开始----------------------------------
