--- a/app/build.gradle
+++ b/app/build.gradle
@@ -107,27 +107,34 @@ configurations.all {
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
 
-    //log日志
+    // log日志
     implementation 'com.orhanobut:logger:2.2.0'
 
-    //butterknife
+    // butterknife
     implementation 'com.jakewharton:butterknife:8.8.1'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
 
-    //okhttp + retrofit + rxandroid
+    // okhttp + retrofit + rxandroid
+    // rxandroid1
     implementation 'io.reactivex:rxandroid:1.2.1'
+    // rxandroid2
+    implementation 'io.reactivex.rxjava2:rxandroid:2.0.2'
+// Because RxAndroid releases are few and far between, it is recommended you also
+// explicitly depend on RxJava's latest version for bug fixes and new features.
+// (see https://github.com/ReactiveX/RxJava/releases for latest 2.x.x version)
+    implementation 'io.reactivex.rxjava2:rxjava:2.1.13'
     implementation "com.squareup.okhttp3:okhttp:${OKHTTP_VERSION}"
     implementation "com.squareup.okhttp3:logging-interceptor:${OKHTTP_VERSION}"
     implementation "com.squareup.retrofit2:retrofit:${RETROFIT_VERSION}"
     implementation "com.squareup.retrofit2:converter-gson:${RETROFIT_VERSION}"
     implementation "com.squareup.retrofit2:adapter-rxjava:${RETROFIT_VERSION}"
 
-    //leakcanary
+    // leakcanary
     debugImplementation "com.squareup.leakcanary:leakcanary-android:${LEAK_CANARY_VERSION}"
     releaseImplementation "com.squareup.leakcanary:leakcanary-android-no-op:${LEAK_CANARY_VERSION}"
     testImplementation "com.squareup.leakcanary:leakcanary-android-no-op:${LEAK_CANARY_VERSION}"
 
-    //support 兼容包
+    // support 兼容包
     implementation 'com.android.support:multidex:1.0.3'
     implementation 'com.android.support.constraint:constraint-layout:1.1.0'
     implementation "com.android.support:design:${APPCOMPAT_VERSION}"
@@ -135,37 +142,37 @@ dependencies {
     implementation "com.android.support:appcompat-v7:${APPCOMPAT_VERSION}"
     implementation "com.android.support:recyclerview-v7:${APPCOMPAT_VERSION}"
 
-    //dagger2
+    // dagger2
     implementation 'com.google.dagger:dagger:2.8'
-    //android-apt插件-引入dagger-compiler包, 不会编译到最后的源码中
+    // android-apt插件-引入dagger-compiler包, 不会编译到最后的源码中
     annotationProcessor 'com.google.dagger:dagger-compiler:2.8'
 
-    //单元测试-引入junit包, 会自动引入hamcrest包
+    // 单元测试-引入junit包, 会自动引入hamcrest包
     testImplementation 'junit:junit:4.12'
 
-    //Mock方式的包mockito
+    // Mock方式的包mockito
     testImplementation 'org.mockito:mockito-core:2.0.76-beta'
 
-    //google的protobuf运行时环境
+    // google的protobuf运行时环境
     implementation 'com.google.protobuf:protobuf-java:3.4.0'
 
-    //square公司出的protobuf方案"wire"的运行时环境
+    // square公司出的protobuf方案"wire"的运行时环境
     implementation 'com.squareup.wire:wire-runtime:2.2.0'
 
-    //fresco加载图片
+    // fresco加载图片
     implementation 'com.facebook.fresco:fresco:1.8.1'
 
-    //facebook的调优工具stecho
+    // facebook的调优工具stecho
     implementation 'com.facebook.stetho:stetho:1.5.0'
     implementation 'com.facebook.stetho:stetho-okhttp3:1.5.0'
 
     // bugly升级SDK已经集成crash上报功能
     implementation 'com.tencent.bugly:crashreport_upgrade:latest.release'
 
-    //其中latest.release指代最新Bugly NDK版本号，也可以指定明确的版本号，例如3.0
+    // 其中latest.release指代最新Bugly NDK版本号，也可以指定明确的版本号，例如3.0
     implementation 'com.tencent.bugly:nativecrashreport:latest.release'
 
-    //渠道打包工具
+    // 渠道打包工具
     implementation 'com.mcxiaoke.gradle:packer-helper:1.0.9'
 }
 
