--- a/build.gradle
+++ b/build.gradle
@@ -1,15 +1,14 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 apply from: 'config.gradle'
 buildscript {
+
     repositories {
+        // You need to add the following repository to download the
+        // new plugin. 下载下面dependencies中的plugin需要的仓库
         google()
         jcenter()
         mavenCentral()
         maven { url 'https://maven.fabric.io/public' }
-        maven {
-            url 'https://maven.google.com/'
-            name 'Google'
-        }
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.1.3'
@@ -26,10 +25,12 @@ buildscript {
 
 allprojects {
     repositories {
+        // 配置所有module gradle中dependencies依赖的库下载仓库
+        google()
         jcenter()
-        maven {
-            url 'https://maven.google.com/'
-            name 'Google'
-        }
     }
+}
+
+task clean(type: Delete) {
+    delete rootProject.buildDir
 }
