--- a/app/src/main/debug/AndroidManifest.xml
+++ b/app/src/main/debug/AndroidManifest.xml
@@ -52,7 +52,7 @@
             android:name="com.tencent.bugly.beta.ui.BetaActivity"
             android:theme="@android:style/Theme.Translucent" />
         <provider
-            android:name="android.support.v4.content.FileProvider"
+            android:name="androidx.core.content.FileProvider"
             android:authorities="com.lj.library.fileProvider"
             android:exported="false"
             android:grantUriPermissions="true">
