--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,7 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 apply from: 'config.gradle'
 buildscript {
+    ext.kotlin_version = '1.3.61'
 
     repositories {
         // You need to add the following repository to download the
@@ -11,13 +12,14 @@ buildscript {
         maven { url 'https://maven.fabric.io/public' }
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.1.3'
+        classpath 'com.android.tools.build:gradle:3.5.3'
         classpath 'io.realm:realm-gradle-plugin:5.1.0'
         classpath 'com.tencent.mm:AndResGuard-gradle-plugin:1.2.12'
-        classpath 'com.tencent.bugly:symtabfileuploader:2.1.2'
+        classpath 'com.tencent.bugly:symtabfileuploader:latest.release'
 //        // tinkersupport插件, 其中lastest.release指拉取最新版本，也可以指定明确版本号，例如1.0.4
 //        classpath "com.tencent.bugly:tinker-support:1.1.2"
         classpath 'com.mcxiaoke.gradle:packer-ng:1.0.9'
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
