--- a/gradle.properties
+++ b/gradle.properties
@@ -22,3 +22,5 @@ isBuildModule=true
 android.useAndroidX=true
 android.enableJetifier=true
 kapt.incremental.apt=true
+android.injected.testOnly=false
+org.gradle.jvmargs=-Xmx3000m
