添加Content Transition, Shared Element Transition  demo

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -61,8 +61,8 @@ android {
         }
 
         debug {
-            minifyEnabled true //启动proguard
-            shrinkResources true // 编译阶段去除无用的资源
+            minifyEnabled false //启动proguard
+            shrinkResources false // 编译阶段去除无用的资源
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
             signingConfig signingConfigs.releaseConfig
         }
