--- a/app/src/main/debug/AndroidManifest.xml
+++ b/app/src/main/debug/AndroidManifest.xml
@@ -51,6 +51,8 @@
         <activity
             android:name="com.tencent.bugly.beta.ui.BetaActivity"
             android:theme="@android:style/Theme.Translucent" />
+        <activity android:name=".activity.SecondTransitionActivity" />
+
         <provider
             android:name="androidx.core.content.FileProvider"
             android:authorities="com.lj.library.fileProvider"
