--- a/build.gradle
+++ b/build.gradle
@@ -20,6 +20,7 @@ buildscript {
 //        classpath "com.tencent.bugly:tinker-support:1.1.2"
         classpath 'com.mcxiaoke.gradle:packer-ng:1.0.9'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+//        classpath 'com.google.dagger:hilt-android-gradle-plugin:2.28-alpha'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
